// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render correctly 1`] = `
<button
  class="px-4 py-2 undefined bg-blue-500 undefined text-white font-bold"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> should render like pill 1`] = `
<button
  class="px-4 py-2 undefined bg-blue-500 rounded-full text-white font-bold"
  type="button"
>
  Test Button
</button>
`;

exports[`<Button /> should render yellow 1`] = `
<button
  class="px-4 py-2 undefined bg-yellow-400 undefined text-white font-bold"
  type="button"
>
  Test Button
</button>
`;
